# ps2dev-ci-tests

./: CMakeLists.txt  PCSX2.ini  filter.pl
.github/workflows/: test.yml
include/: harness.h
tests/: CMakeLists.txt  test.cmake.in
tests/basic_math/: basic_math.c  basic_math.expected
tests/basic_printf/: basic_printf.c  basic_printf.expected
tests/custom_cmake/: CMakeLists.txt  main.cpp
